--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "cgb-scripts eject"
   },
   "dependencies": {
-    "cgb-scripts": "1.9.5"
+    "cgb-scripts": "1.9.5",
+    "leaflet": "^1.3.1"
   }
 }
