--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "cgb-scripts eject"
   },
   "dependencies": {
-    "cgb-scripts": "1.9.5",
-    "leaflet": "^1.3.1"
+    "cgb-scripts": "^1.9.8",
+    "leaflet": "^1.3.4"
   }
 }
